# quickhull

./: CMakeLists.txt  dependancies.txt  quickhull.cpp  quickhull.py
libs/linux/: CMakeLists.txt
